--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
         header {
         background-color: aquamarine;
         }
+        li{
+            display: inline;
+        }
+
+        a{
+            text-decoration: none;
+            color: black;
+        }
+
     </style>
 </head>
 <body>
